--- a/dev/src/index.html
+++ b/dev/src/index.html
@@ -8,16 +8,16 @@
     <title>Join the queue</title>
     <link href="assets/css/styles.css" rel="stylesheet">
     <script src="assets/js/libs.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/3.0.4/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.2.1/firebase.js"></script>
     <script>
-        // Initialize the Firebase SDK
-        var config = {
-            apiKey: "AIzaSyDA41mdPzLxsI81dbnJHuNvPEuSgqavvQ0",
-            authDomain: "beacons-553dd.firebaseapp.com",
-            databaseURL: "https://beacons-553dd.firebaseio.com",
-            storageBucket: "beacons-553dd.appspot.com",
-        };
-        firebase.initializeApp(config);
+    // Initialize Firebase
+    var config = {
+        apiKey: "AIzaSyAXVDzcVs4jml_wTFXzEawQbnwSbYCUPGI",
+        authDomain: "live-blog-a154f.firebaseapp.com",
+        databaseURL: "https://live-blog-a154f.firebaseio.com",
+        storageBucket: ""
+    };
+    firebase.initializeApp(config);
     </script>
     <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
     <script src="assets/js/app.min.js"></script>
