--- a/dev/src/index.html
+++ b/dev/src/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-    <title>Join the queue</title>
+    <title>Live blog</title>
     <link href="assets/css/styles.css" rel="stylesheet">
     <script src="assets/js/libs.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.2.1/firebase.js"></script>
