Updated config, testing loggin and device plugins

--- a/dev/src/index.html
+++ b/dev/src/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <title>Live blog</title>
     <link href="assets/css/styles.css" rel="stylesheet">
+    <script src="cordova.js"></script>
     <script src="assets/js/libs.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.2.1/firebase.js"></script>
     <script>
